fixing user select on mobile

--- a/style.css
+++ b/style.css
@@ -22,4 +22,11 @@ body {
   height: 100%;
   max-width: 1000px;
   max-height: 800px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
